worked on index and details
Added a function that would see if there are more than one location and adding html if there is. Worked on the contact page. Ask about the behavior of the form after it has been submitted.

--- a/css/details.css
+++ b/css/details.css
@@ -4,3 +4,12 @@ body {
   text-shadow: 1px 1px 3px black;
   font-size: 1.5rem;
 }
+
+header a {
+  font-size: 1.3em;
+  padding: 2rem 0 0 0;
+}
+
+#back {
+  height: 2rem;
+}
