--- a/css/details.css
+++ b/css/details.css
@@ -13,3 +13,17 @@ header a {
 #back {
   height: 2rem;
 }
+
+h1 {
+  width: auto;
+}
+
+.title-container {
+  display: inline-flex;
+  align-items: center;
+}
+
+.monster-img {
+  width: 50px;
+  height: 50px;
+}
